--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header style="background-color: lightblue;">
+  <header>
     <h1>personal blogging app</h1>
     <button id="logoutBtn">
     <a href="./login.html">Logout</a>
