--- a/login.html
+++ b/login.html
@@ -9,13 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.3/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+   
 </head>
 
 <body class="bg-success">
@@ -30,16 +24,17 @@
             <input type="text" class="form-control" name="" id="pass"><br />
             <br />
             <button type="button" onclick="login()" class="form-control btn btn-primary"> Login </button>
+            <p>you are note register <a href="./signup.html">signup</a></p>
         </div>
     </div>
 
     <script>
 
-var a=localStorage.getItem("abc");
+// var a=localStorage.getItem("abc");
 
-if(a=="save password"){
-    window.location.href="home.html";
-}
+// if(a=="save password"){
+//     window.location.href="home.html";
+// }
 
 
 
