--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,7 @@
             <input type="text" class="form-control" name="" id="pass"><br />
             <br />
             <button type="button" onclick="signup()" class="form-control btn btn-primary"> SignUp </button>
+            <p>Already a member ?<a href="./login.html">login</a></p>
         </div>
     </div>
 
